getting rid of the remaining LinkedList to try to improve performance a bit + writing only the needed rdf annotation namespaces